@@ -1,26 +1,33 @@
-:: --module-path 	-> Alle kompilierten Abhängigkeiten
-:: --add-modules	-> Root-Modul im Graphen (required modules are loaded automatically)
-:: -sourcepath 		-> Pfad zum Quellcode, aus dem die Doku generiert wird
-:: --module			-> Welches Modul dokumentiert werden soll
+:: --module-path        -> Kompilierte Abhängigkeiten
+:: --module-source-path -> Zuordnung: Modulname = Modulordner; notwendig weil Ordner- von Modulname abweicht.
+:: --module             -> Modul, für das die Javadoc erzeugt werden soll
+
 @echo off
 setlocal
-:: === Pfadnormalisierung mit ~f (relativen in absoluten Pfad)
-for %%I in ("%~dp0..") do set PROJECT_ROOT=%%~fI
-:: === Zielordner
-set DOCS_DIR=%PROJECT_ROOT%\_DOCS\model\api
+
+:: === Projektwurzel bestimmen
+:: %~dp0 ist der Ordner dieses Skripts.
+:: %%~fI wandelt den relativen Pfad in einen absoluten Pfad um.
+for %%I in ("%~dp0..") do set "PROJECT_ROOT=%%~fI"
+
+:: === Zielordner für Javadoc
+set "DOCS_DIR=%PROJECT_ROOT%\_DOCS\MODULE_model"
 
 echo ### Generating Javadoc for com.github.sweettooth.model ...
 
 javadoc ^
-	--module-path %PROJECT_ROOT%\model\bin;%PROJECT_ROOT%\shared\bin ^
-	--add-modules com.github.sweettooth.model ^
-	-sourcepath %PROJECT_ROOT%\model\src\main\java ^
+	--module-path "%PROJECT_ROOT%\persistence\bin;%PROJECT_ROOT%\shared\bin" ^
+	--module-source-path "com.github.sweettooth.model=%PROJECT_ROOT%\model\src\main\java" ^
 	--module com.github.sweettooth.model ^
 	-d "%DOCS_DIR%"
-	
-set JAVADOC_ERROR=%ERRORLEVEL%
-IF %JAVADOC_ERROR% NEQ 0 (
-    echo [ERROR] Javadoc generation failed.
+
+:: === Rückgabecode von javadoc sichern
+:: ERRORLEVEL muss direkt nach dem javadoc-Aufruf ausgewertet werden,
+:: damit kein späterer Befehl den Wert überschreibt.
+set "JAVADOC_ERROR=%ERRORLEVEL%"
+
+if %JAVADOC_ERROR% neq 0 (
+	echo [ERROR] Javadoc generation failed.
 	pause
 	endlocal & exit /b %JAVADOC_ERROR%
 )
